<resources>
    <string name="app_name">Hospital DBMS</string>
    <string name="user_id">User ID:</string>
    <string name="input_your_id">Input your ID</string>
    <string name="password">Password:</string>
    <string name="input_your_password">Input your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_registering">registering</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone">Phone:</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">Sex:</string>
    <string name="age">Age:</string>
    <string name="input_your_age">Input your age</string>
    <string name="role">Role:</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="department">Department:</string>
    <string name="input_your_department">Input your department</string>
    <string name="commit">Commit</string>
    <string name="back">Back</string>
    <string name="name">Name:</string>
    <string name="input_your_name">Input your name</string>
    <string name="reset">Reset</string>
    <string name="doctor_verification">Doctor Verification</string>
    <string name="reset_all_table">Reset All Table</string>
    <string name="update_patient_table">Update Patient Table</string>
    <string name="update_doctor_table">Update Doctor Table</string>
    <string name="update_nurse_table">Update Nurse Table</string>
    <string name="update_treatment_table">Update Treatment Table</string>
    <string name="update_room_table">Update Room Table</string>
    <string name="logout">Logout</string>
    <string name="view_doctor_information">View Doctor Information</string>
    <string name="your_treatment_record">Your Treatment Record</string>
    <string name="modify_your_information">Modify your Information</string>
    <string name="new_treatment">New Treatment</string>
    <string name="view_patient_history">View Patient History</string>
    <string name="ack_warn">Attention:\nAccount haven\'t verified. \nAll functions are NOT available.\nPlease contact administrator.</string>
</resources>