<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".admin">

    <TextView
        android:id="@+id/admin_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Administrator"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/admin_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_all_table"
        android:textSize="25sp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#F3D03E"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/admin_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor_verification"
        android:backgroundTint="#00843D"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/admin_reset"/>

    <Button
        android:id="@+id/admin_update_patient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_patient_table"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/admin_verify"/>

    <Button
        android:id="@+id/admin_update_doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_doctor_table"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/admin_update_patient"/>

    <Button
        android:id="@+id/admin_update_nurse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_nurse_table"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/admin_update_doctor"/>

    <Button
        android:id="@+id/admin_update_treatment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_treatment_table"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/admin_update_nurse"/>

    <Button
        android:id="@+id/admin_update_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_room_table"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/admin_update_treatment"/>

    <Button
        android:id="@+id/admin_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Modify Information"
        android:backgroundTint="#97D700"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/admin_update_room"/>

    <Button
        android:id="@+id/admin_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="25sp"
        android:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintTop_toBottomOf="@id/admin_modify"/>


</androidx.constraintlayout.widget.ConstraintLayout>