<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".patient">

    <TextView
        android:id="@+id/patient_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Patient"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/patient_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_doctor_information"
        android:textSize="25sp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/patient_treatment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_treatment_record"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/patient_view"/>

    <Button
        android:id="@+id/patient_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_your_information"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/patient_treatment"/>

    <Button
        android:id="@+id/patient_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="25sp"
        android:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintTop_toBottomOf="@id/patient_modify"/>


</androidx.constraintlayout.widget.ConstraintLayout>